# Numerical_Optimization_for_Robotics

./: .gitignore  README.md
Homework1/: .clang-format  CMakeLists.txt  SolveRosenblock.cpp  SolveRosenbrock.cpp  tic_toc.h
Homework2/src/curve_generator/: CMakeLists.txt  package.xml
Homework2/src/curve_generator/config/: curve_generator.yaml
Homework2/src/curve_generator/launch/: curve_generator.launch  debug_curve_generator.launch
Homework2/src/curve_generator/src/: cubic_curve.hpp  cubic_spline.hpp  curve_generator.cpp  geo_utils.hpp  history_buffer.hpp  path_smoother.hpp  potential_function.hpp  sdlp.hpp  visualizer.hpp
uav_ws/src/Project/path_smoothing/gcopter/include/gcopter/: cubic_spline.hpp  lbfgs.hpp  path_smoother.hpp
